tests/rosetta/out/Smalltalk/associative-array-creation.out
/workspace/mochi/tests/rosetta/out/Smalltalk/associative-array-creation.st:12: parse error, expected '|' or identifier
